# assistente_financeiro

./: Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
api/: agents.py  schemas.py
api/assistent/: agent.py  assistents.py
backend/: routers.py
backend/api/: agents.py  schemas.py
backend/api/assistent/: assistents.py
front/: main.py  process_data.py
front/api/: core.py  search_bot.py
templates/: index.html
